@@ -75,7 +75,7 @@ def _img2data(src):
         img = src
     if isinstance(img, nibabel.spatialimages.SpatialImage):
 
-        data, header = img.get_data(), img.get_header()
+        data, header = img.get_data(), img.header
 
         if len(img.shape) == 5 and img.shape[3] == 1:
             # hack to allow loading NIFTI files generated by AFNI
@@ -293,7 +293,7 @@ def fmri_dataset(samples, targets=None, chunks=None, mask=None,
             ds.fa[fattr] = ds.a.mapper.forward1(value)
 
     # store interesting NIfTI props in the dataset in a more portable way
-    ds.a['imgaffine'] = img.get_affine()
+    ds.a['imgaffine'] = img.affine
     ds.a['imgtype'] = img.__class__.__name__
     # stick the header instance in as is, and ...
     ds.a['imghdr'] = imghdr
